# julia_pkg_management

./: CMakeLists.txt  README.md
doc/: Develop.md  ui_design.pptx
form/: install_pkg.ui  julia_pkg_management.ui  ui_install_pkg.h  ui_julia_pkg_management.h
include/: julia_pkg_management.h
include/julia_pkg_management/: httpwindow.h  install_pkg.h  julia_pkg_management.h
resource/: julia_pkg_management.qrc
scripts/: scan_pkg.jl
src/: httpwindow.cpp  install_pkg.cpp  julia_pkg_management.cpp  main.cpp
